# rte-mlops-demo

./: .gitignore  Dockerfile  README.md  dvc.yaml  metrics.json  metrics.yaml  params.yaml  pyproject.toml
rte_mlops_demo/: api.py  build_dataset.py  metrics.py  parser_config.yaml  scraper.py  train.py
tests/: test_rte_mlops_demo.py
