[tool.poetry]
name = "rte-mlops-demo"
version = "0.1.0"
description = ""
authors = ["Loic Macherel <loic.macherel@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
arrow = "^1.2.1"
requests = "^2.27.1"
PyYAML = "^6.0"
dvc = "^2.9.3"
tqdm = "^4.62.3"
sktime = {version = "^0.9.0"}
pmdarima = "^1.8.4"
fastapi = {version = "^0.73.0"}
uvicorn = {extras = ["standard"], version = "^0.17.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.31.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
